fix expand and collapse all

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -40,12 +40,12 @@
 	--table-hover: light-dark(#f1f5f9, #151e33);
 	--child-row: light-dark(#fafafa, #070a12);
 
-	--primary: light-dark(#4f46e5, #6366f1);
-	--primary-hover: light-dark(#4338ca, #818cf8);
-	--primary-active: light-dark(#3730a3, #4f46e5);
+	--primary: light-dark(#468be5, #63a5f1);
+	--primary-hover: light-dark(hsl(214 75.4% 40.6%), #81aff8);
+	--primary-active: light-dark(hsl(214 75.4% 30.6%), #81baf8);
 	--primary-rgb-light: 79, 70, 229;
 	--primary-rgb-dark: 99, 102, 241;
-	--primary-soft: light-dark(rgba(79, 70, 229, 0.08), rgba(99, 102, 241, 0.15));
+	--primary-soft: light-dark(rgba(168, 201, 243, 20%), #63a8f110);
 
 	--success: light-dark(#498262, #34a55f);
 	--success-soft: light-dark(#34644926, rgba(52, 211, 153, 0.15));
@@ -125,7 +125,7 @@ pre {
 }
 
 .container {
-	max-width: 1400px;
+	max-width: 1600px;
 	margin: 1rem auto;
 	padding: 0rem 1.5rem;
 }
@@ -177,9 +177,9 @@ button {
 		box-shadow: 0 0 0 2px var(--input-focus-ring);
 	}
 
-	&:active {
+	/*&:active {
 		transform: scale(0.98);
-	}
+	}*/
 
 	&:disabled {
 		opacity: 0.6;
